# ai-news-radar

./: .coverage  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  SKILL.md  coverage.xml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.claude/memories/: YAML_FORMAT.md
.github/workflows/: ci.yml  release.yml  skill-validation.yml
assets/data/: keywords.yaml  sample_opml.opml  sources.yaml
assets/templates/: rss_template.xml
docs/: DEPLOYMENT.md
docs/requirements/: PROJECT_REQUIREMENTS.md
references/: ARCHITECTURE.md  FILTERING_RULES.md  SOURCE_MAPPING.md
scripts/: __init__.py  config.py  main.py
scripts/filters/: duplicate_filter.py
scripts/parsers/: base_parser.py  html_parser.py  rss_parser.py
scripts/storage/: json_storage.py
scripts/utils/: __init__.py  cache.py  logger.py  text_utils.py
skill/: SKILL.md  __init__.py  state.py
skill/core/: __init__.py  news_radar.py
skill/filters/: ai_topic_filter.py  time_filter.py
skill/parsers/: html_parser.py  rss_parser.py
skill/scripts/: main.py
skill/storage/: __init__.py  json_storage.py
skill/utils/: date_utils.py  logger.py
src/: __init__.py  config.py  core.py
src/filters/: __init__.py  ai_topic_filter.py  duplicate_filter.py  time_filter.py
src/parsers/: __init__.py  base_parser.py
src/utils/: __init__.py  cache.py  date_utils.py  text_utils.py
tasks/: FEATURE-001-news-persistence-implementation-analysis.md
tests/: __init__.py  conftest.py  test_filters.py  test_parsers.py
tests/e2e/: __init__.py
tests/fixtures/: sample_html.html  sample_rss.xml  test_keywords.yaml
tests/integration/: __init__.py
tests/performance/: __init__.py
tests/unit/: __init__.py  (+10 more)
(+9 files in other folders)
