[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-news-radar"
version = "1.0.0"
description = "AI News Radar - A production-grade AI/tech news aggregator"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "AI News Radar Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary",
]
keywords = ["ai", "news", "aggregator", "rss", "rss-feed", "scraper"]

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.10",
    "python-dateutil>=2.8.2",
    "lxml>=4.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
cli = [
    "click>=8.1.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "responses>=0.24.0",
    "freezegun>=1.4.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
]

[project.urls]
Homepage = "https://github.com/RambleRainbow/ai-news-radar"
Documentation = "https://github.com/RambleRainbow/ai-news-radar"
Repository = "https://github.com/RambleRainbow/ai-news-radar.git"
Issues = "https://github.com/RambleRainbow/ai-news-radar/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ai_news_radar = ["py.typed"]
